gccida/c3/reg_dies
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reg_dies/src/global.c:2239:28: error: must use 'enum' tag to refer to type 'machine_mode'
void  reg_dies( int regno, machine_mode mode,  struct insn_chain *chain) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reg_dies/src/global.c:2258:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v5 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reg_dies/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reg_dies/src/obj/global.o] Error 1
